2024-12-06T00:53:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12190808743 # 501
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-06
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 429 819 / 430 820
* notice: next accum: outdated-unq outdated-all / unq all: 429 819 / 431 821
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-05]

2024-12-05T00:53:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12171110605 # 500
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-05
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 428 818 / 430 820
* notice: next accum: outdated-unq outdated-all / unq all: 429 819 / 430 820
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-21] / []

2024-12-04T00:54:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12150882566 # 499
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-04
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 427 817 / 430 820
* notice: next accum: outdated-unq outdated-all / unq all: 428 818 / 430 820
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-19] / []

2024-12-03T00:54:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12130803238 # 498