@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-12-06T00:53:19Z",
+  "timestamp" : "2024-12-08T00:57:37Z",
   "count_outdated" : 819,
   "uniques_outdated" : 429,
-  "count" : 821,
-  "uniques" : 431,
+  "count" : 822,
+  "uniques" : 432,
   "clones" : [
     {
       "timestamp": "2024-12-02T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2024-12-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
