@@ -1,3 +1,12 @@
+2024-12-08T00:57:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12217510347 # 503
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-08
+* notice: last 14d: unq all: 1 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 429 819 / 431 821
+* notice: next accum: outdated-unq outdated-all / unq all: 429 819 / 432 822
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-12-07]
+
 2024-12-06T00:53:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12190808743 # 501
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-06
